--- a/ChatMessanger/ChatMessanger/ru.lproj/Localizable.strings
+++ b/ChatMessanger/ChatMessanger/ru.lproj/Localizable.strings
@@ -13,3 +13,6 @@
 
 "registrationTitleLabel" = "Регистрация";
 "namePlaceholder" = "Регистрация";
+
+"tabUsers" = "Пользователи";
+"tabMessages" = "Сообщения";
